--- a/templates/statistic.html
+++ b/templates/statistic.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Statistic</title>
     <style>
@@ -22,6 +23,7 @@
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
+            font-size: 24px;
         }
 
         li a:hover {
@@ -34,6 +36,7 @@
         table , th , td{
             border-bottom: 2px solid black;
             padding: 15px;
+            font-size: 20px;
         }
         </style>
 </head>
@@ -41,14 +44,14 @@
 
 <body>
     <ul>
-        <li><a class="active" href="/">Home</a></li>
+        <li><a class="active" href="/">Dashboard</a></li>
         <li><a href="#">Statistics</a></li>
     </ul>
 
     <div style="padding:40px;background-color:#E6E6FA;height:1500px;">
 
         <div align = "center">
-            <h1><b>Trashy Statistic</b></h1>
+            <h1 style = "font-size: 40px;"><b>Trashy Statistic</b></h1>
 
             <table id="myTable">
                 <tbody>
@@ -56,31 +59,31 @@
                         <th>ประเภทขยะ</th>
                         <th>จำนวนรูป</th>
                     </tr>
-                    <tr>
+                    <tr align = "center">
                         <td>แก้ว</td>
                         <td id="glass">{{glass}}</td>
                     </tr>
-                    <tr>
+                    <tr align = "center">
                         <td>กระดาษ</td>
                         <td id="paper">{{paper}}</td>
                     </tr>
-                    <tr>
+                    <tr align = "center">
                         <td>โลหะ</td>
                         <td id="metal">{{metal}}</td>
                     </tr>
-                    <tr>
+                    <tr align = "center">
                         <td>พลาสติก</td>
                         <td id="plastic">{{plastic}}</td>
                     </tr>
-                    <tr>
+                    <tr align = "center">
                         <td>ขยะทั่วไป</td>
                         <td id="trash">{{trash}}</td>
                     </tr>
-                    <tr>
+                    <tr align = "center">
                         <td>ขยะเปียก</td>
                         <td id="waste">{{waste}}</td>
                     </tr>
-                    <tr>
+                    <tr align = "center">
                         <td>ขยะอันตราย</td>
                         <td id="dangerous">{{dangerous}}</td>
                     </tr>
