--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
 <body>
     <ul>
         <li><a class="active" href="#">Dashboard</a></li>
-        <li><a href="/stat">Statistics</a></li>
+        <li><a href="/stat">Statistic</a></li>
     </ul>
 
     <div style="padding:40px; background-color:#E6E6FA; height:1000px; overflow-y: scroll;">
