--- a/templates/statistic.html
+++ b/templates/statistic.html
@@ -45,7 +45,7 @@
 <body>
     <ul>
         <li><a class="active" href="/">Dashboard</a></li>
-        <li><a href="#">Statistics</a></li>
+        <li><a href="#">Statistic</a></li>
     </ul>
 
     <div style="padding:40px;background-color:#E6E6FA;height:1500px;">
